--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "metro-config": "^0.80.2",
     "tailwindcss": "^3.3.2"
   },
   "private": true
