--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "expo-blur": "~12.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
